# voxel_attempt1

./: .gitignore  Cargo.toml  README.md  devenv.nix  shell.nix
engine/: Cargo.toml
engine/src/: app.rs  camera.rs  compute.wgsl  main.rs  objects.rs  wgpu_buffers.rs  wgpu_ctx.rs
engine/src/physics/: mod.rs  voxel_obj_shape.rs
engine/src/shaders/: dda.wgsl  lighting.wgsl  upscale.wgsl
engine/src/wgsl/: compute.wgsl
graph/: Cargo.toml
graph/src/: basic_node3d.rs  sdg.rs
src/: app.rs  camera.rs  compute.wgsl  main.rs  render.wgsl  shader.frag  shader.wgsl  wgpu_ctx.rs
src/graph/: basic_node3d.rs  geometry.rs  mod.rs  sdg.rs
