[package]
name = "voxel_game"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.30"
wgpu = "25.0"
pollster = "0.4.0"
fastnoise-lite = "1.1"
sdg = { path = "../graph" }
rapier3d = "0.28"
nalgebra = { version = "0.34", features = ["convert-glam030"]}
lilypads = "0.10"
